--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -675,6 +675,9 @@ Vzhledem k tomu, že počet fixerů ve scéně roste v nejhorším případě kv
 
 
 \section{Demo hra}
+
+Pro demonstraci funkčnosti našeho systému jsme vytvořili drobnou akční hru, její spustitelné sestavení pro platformy Windows a Linux nalezne čtenář v příloze.
+
 \begin{itemize}
   \item Pro testování a demonstraci funkčnosti našeho konceptu jsme vytvořili ukázkovou hru
   \item herní svět - aréna + okolní les
