--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -16,7 +16,7 @@ Na druhé straně tu však byl \textbf{běžný obyvatel}, který nepatřil k pr
 
 Mocenské soupeření států ústí ve zběsilý a nikdy nekončící \textbf{závod ve vývoji účinnějších zbraní a metod jejich použití}. V jednom okamžiku dominuje Blízkému východu vozataj, v následujícím jej poráží Makedonská falanga, nad ní předvede svou superioritu Římský systém manipulů, ten vzápětí Římané sami prohlašují za zastaralý, avšak o půl tisíciletí později stejně jejich říši rozvrací hordy Hunských jezdců... chladná zbraň, ať už v rukou jezdce či pěšího vojáka, zůstává po většinu dějin dominantním prvkem na bojišti, se střelnými zbraněmi hrajícími významnou podpůrnou roli. Až s rozmachem zbraní palných se tato dynamika obrací a velmi pozvolně se dobíráme k modernímu vojenství. V současné době se chladná zbraň považuje převážně za překonanou - uplatnění pro ní stále existuje např. v kontextu pořádkových složek, avšak i pro ty plní úlohu spíše doplňkovou. Mimo oficiální kruhy pořád hraje nezanedbatelnou roli, avšak to je především pro její \textbf{triviální dostupnost} v porovnání s palnou zbraní.
 
-Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění \textbf{Kendó} ("cesta meče") vycházející ze samurajské tradice, či evropská komunita \textbf{historického šermu}, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní \textbf{sportovní šerm}, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén \textbf{LARP}\footnote{\ac{LARP}}, jehož jedna z podob - tzv. "dřevárna" - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
+Tradice chladné zbraně však stále žije v civilních komunitách dedikovaných zachování historie a kulturního odkazu. Mezi významné patří japonské umění \textbf{Kendó} (''cesta meče'') vycházející ze samurajské tradice, či evropská komunita \textbf{historického šermu}, jež vychází z dochovaného učení středověkých mistrů. Rovněž je zde moderní \textbf{sportovní šerm}, jež přímo navazuje na šermířskou tradici ranného novověku. V posledních letech tyto vlivy více pronikají i do běžných volnočasových aktivit - ve Střední Evropě například je stále oblíbenější fenomén \textbf{LARP}\footnote{\ac{LARP}}, jehož jedna z podob - tzv. ''dřevárna'' - znamená hromadnou akci, na které se desítky až stovky lidí v tématických kostýmech a vyzbrojení zpravidla dřevěnými, molitanem měkčenými replikami zbraní, střetnou v bitvě. Pravidla přirozeně musí zaručit bezpečí účastníků, avšak stále při zachování autentického zážitku z boje.  
 
 Vzhledem k charakteru a rozšířenosti výše zmíněných fenoménů lze očekávat, že jejich zastánci mají v nemalé míře zastoupení i ve videoherní komunitě. Přirozeně takoví lidé mohou mít zájem o hru, jež jim umožní jejich oblíbenou činnost napodobit, ale bez mnohých nepohodlí, jež ji provázejí v reálném světě. Pro hráče, který s bojem v reálném světě žádnou zkušenost nemá, může zase videohra být cestou, jak tuto mezeru ve svých zkušenostech částečně zaplnit a získat například hlubší porozumění k historii.
 
@@ -32,7 +32,7 @@ Tato absolutní svoboda však může být omezena morálními zásadami účastn
     \item \textbf{Voják v bitvě} koná v mezích, jež mu stanovuje vojenská disciplína a rozkazy velitele
     \item \textbf{Účastník turnaje} přirozeně nesmí opustit vyhrazené bojiště či využívat pomoci z publika
     \item Ve \textbf{cvičném souboji} si účastníci logicky dávají pozor, aby jeden druhého zbytečně nezabil či nezmrzačil
-    \item V duelu na obranu cti se účastníci mohli \textbf{předem dohodnout}, že nechtějí jeden druhého zabít, a např. bojovat "na první krev"
+    \item V duelu na obranu cti se účastníci mohli \textbf{předem dohodnout}, že nechtějí jeden druhého zabít, a např. bojovat ''na první krev''
 \end{itemize}
 Mezi znaky zkušeného šermíře patří schopnost být si vědom těchto mantinelů a v jejich rámci jednat kreativním a účinným způsobem.
 
@@ -173,7 +173,7 @@ Přesto najdeme mnoho takových zbraní, které se staly \textbf{ikonickým symb
 
 
 \subsection{Shrnutí}
-Pokud videohra obsahuje násilné prvky, s největší pravděpodobností v ní najdeme nějakou chladnou zbraň. Typický způsob její implementace je model "černé skříňky": hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - po jeho stisknutí hráčská postava sama provede útok jak uzná za vhodné. 
+Pokud videohra obsahuje násilné prvky, s největší pravděpodobností v ní najdeme nějakou chladnou zbraň. Typický způsob její implementace je model ''černé skříňky'': hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - po jeho stisknutí hráčská postava sama provede útok jak uzná za vhodné. 
 
 Výhodami toho přístupu je vysoká \textbf{přívětivost a nenáročnost} pro nové hráče a schopnost sloužit jako \textbf{uniformní rozhraní} slučující i velmi odlišné typy zbraní (světelný meč, řemdih, rozbitou lahev od pálenky). Některým hráčům však může vadit \textbf{nedostatečný pocit kontroly} nad konáním jejich postavy.
 
@@ -400,7 +400,7 @@ Uvedli jsme čtenáře do problematiky boje s chladnou zbraní v reálném svět
 
 V reálném světě jde o extrémně komplexní oblast, která za sebou má mnoho tisíciletí vývoje, nespočet technik vedoucích k jedinému cíli - vyřadit protivníka z bojeschopného stavu dříve než on vás. Naprostými základy jsou orientace na bojišti, správná technika pohybu, obratné a kreativní použití zbraně, a předvídání protivníka. V případě hromadného boje pak rovněž koordinace a disciplína vojenského celku. 
 
-Ve videohře chladná zbraň typicky figuruje jako "černá skříňka" - hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - jeho stisknutím postava provede útok jak sama uzná za vhodné. Výhodami tohoto systému jsou jednoduchost použití a univerzální aplikovatelnost i pro škálu velmi vzájemně odlišných zbraní. Má-li boj s chladnou zbraní sloužit jako nosná herní mechanika, hloubka mu je typicky dodávána důrazem na pohyb, přehled o bojové situaci a přesné časování, dále kombinací s dalšími systémy (magie, lektvary, pasti), v neposlední řadě kreativním designem nepřátel.
+Ve videohře chladná zbraň typicky figuruje jako ''černá skříňka'' - hráči je poskytnuto jediné tlačítko - \textbf{Zaútoč!} - jeho stisknutím postava provede útok jak sama uzná za vhodné. Výhodami tohoto systému jsou jednoduchost použití a univerzální aplikovatelnost i pro škálu velmi vzájemně odlišných zbraní. Má-li boj s chladnou zbraní sloužit jako nosná herní mechanika, hloubka mu je typicky dodávána důrazem na pohyb, přehled o bojové situaci a přesné časování, dále kombinací s dalšími systémy (magie, lektvary, pasti), v neposlední řadě kreativním designem nepřátel.
 
 Takový systém tedy pěkně vystihuje některé z aspektů, které hrají roli v reálném světě. Ten, který je pro typického laika nejzjevnější - totiž ovládání zbraně - je však ponechán zcela mimo hráčovu přímou kontrolu. Hra, které by se zdařilo poskytnout hráči nad zbraní bezprostřední kontrolu, by tím mohla získat mnoho benefitů - mimo zjevné atraktivity plynoucí z neohranosti konceptu například taková zbraň má potenciál stát se vděčným zdrojem emergentního gameplaye.
 
