--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -81,7 +81,7 @@ Pokud tato možnost nepřipadá v úvahu, či je komponent mnoho a přetahovat v
     \item \textbf{UnityEngine.GameObject.FindByTag()} - Rovněž prohledává celou scénu. Pro každý herní objekt je možné v editoru nastavit specielní poznávací symbol - tag - podle něj zde vyhledáváme. Vrací odkaz na herní objekt, na něm typicky ještě bude nutné zavolat GetComponent. Toto je obecně doporučovaný způsob, jak získávat odkaz na singletony.
 \end{itemize}
 
-Je však třeba podotknout, že všechny tyto možnosti zpravidla vykonávají nějakou formu lineárního hledání a nejsou tedy zcela efektivní. Velmi doporučované je provádět hledání pokud možno jen jednou při aktivaci naší komponenty, a jeho výsledek si "nakešovat" do proměnné.
+Je však třeba podotknout, že všechny tyto možnosti zpravidla vykonávají nějakou formu lineárního hledání a nejsou tedy zcela efektivní. Velmi doporučované je provádět hledání pokud možno jen jednou při aktivaci naší komponenty, a jeho výsledek si ''nakešovat'' do proměnné.
 
 \subsection{Herní smyčka}
 
@@ -110,7 +110,7 @@ Jde o velmi starou část enginu, která je vázána potřebou zpětné kompatib
 Základními službami, které poskytuje, jsou:
 \begin{itemize}
     \item \textbf{UnityEngine.Input.GetKey()} - Této funkci předáme jako argument klávesu (jeden z prvků enumu - zahrnuje specielní klávesy jako Esc nebo Shift) a z návratové hodnoty zjistíme, zda klávesa je či není aktuálně stisknutá. Rovněž nalezneme varianty GetKeyDown/GetKeyUp, které vrací true pouze ve snímku, kdy stisk začal/skončil.
-    \item \textbf{UnityEngine.Input.GetAxis()} - V nastavení projektu je možné konfigurovat pojmenované "osy vstupu", které mohou odpovídat pohybu myši, joysticku nebo dvojici kláves. Tato funkce nám pro osu daného jména vrátí příslušnou hodnotu v intervalu [-1; 1] (jak silně doleva/doprava).
+    \item \textbf{UnityEngine.Input.GetAxis()} - V nastavení projektu je možné konfigurovat pojmenované ''osy vstupu'', které mohou odpovídat pohybu myši, joysticku nebo dvojici kláves. Tato funkce nám pro osu daného jména vrátí příslušnou hodnotu v intervalu [-1; 1] (jak silně doleva/doprava).
     \item \textbf{UnityEngine.Input.mousePosition} - Souřadnice pixelu obrazovky, kde se nalézá kurzor myši. Máme-li k dispozici kameru, která odpovídá obrazovce (typicky UnityEngine.Camera.main), takto získáme paprsek v herním světě: camera.ScreenPointToRay(UnityEngine.Input.mousePosition).  
 \end{itemize}
 
@@ -193,7 +193,7 @@ Nyní hru znovu zapneme a uvidíme, že chování se nezměnilo. ConnectedBody n
 
 Další položkou, které si všimneme, jsou políčka pro \textbf{uzamčení} pohybu a rotace v jednotlivých osách. Pro každý ze stupňů volnosti můžeme nastavit jednu z možností: Free, Limited, nebo Locked. \textbf{Locked} znamená, že pohyb je zakázaný a těleso se musí držet v poloze odpovídající anchoru. \textbf{Limited} znamená, že pohyb je umožněn, ale pouze v rozmezí, které nastavíme prostřednictvím dalších parametrů. \textbf{Free} značí volný pohyb.
 
-Pokud je stupeň volnosti nastaven na Limited či Free, nemusí to nutně znamenat, že bude objekt splihle viset v poloze nejmenšího odporu, kterou mu nastavené limity nabízejí. Na jointu je možné nakonfigurovat sílu, kterou smí vyvíjet, aby objekt udržoval v určité cílové pozici. Pro konfiguraci cíle jsou nabídnuty pole \textbf{targetPosition} a \textbf{targetRotation}\footnote{Pro pokročilejší scénáře dokonce existují targetVelocity a targetAngularVelocity - jejich využitím lze velmi jednoduše vytvořit např. větrný mlýn, jehož lopatky se neustále točí dokola.}, síly pak nastavujeme zvlášť pro každou jednotlivou osu (položky xx\textbf{Drive}). Každá taková síla je udána dvěma důležitými složkami - spring a damper. \textbf{Spring} udává sílu "pružiny", která naše těleso tlačí do cílové pozice. Je-li však síla dostatečně velká, může se stát, že cílovou pozici při pohybu "přestřelíme". V dalším snímku je pak k dorovnání třeba vyslat objekt opačným směrem atd. čímž vzniká nepěkný efekt třesení. Řešením je \textbf{damper} - ten udává, jak má být pohyb tlumen, aby k tomuto třasu nedocházelo, může ho však celkově zpomalovat. Pro dosažení dobrého hráčského dojmu ze hry je třeba umět správně vyladit poměr těchto dvou sil.
+Pokud je stupeň volnosti nastaven na Limited či Free, nemusí to nutně znamenat, že bude objekt splihle viset v poloze nejmenšího odporu, kterou mu nastavené limity nabízejí. Na jointu je možné nakonfigurovat sílu, kterou smí vyvíjet, aby objekt udržoval v určité cílové pozici. Pro konfiguraci cíle jsou nabídnuty pole \textbf{targetPosition} a \textbf{targetRotation}\footnote{Pro pokročilejší scénáře dokonce existují targetVelocity a targetAngularVelocity - jejich využitím lze velmi jednoduše vytvořit např. větrný mlýn, jehož lopatky se neustále točí dokola.}, síly pak nastavujeme zvlášť pro každou jednotlivou osu (položky xx\textbf{Drive}). Každá taková síla je udána dvěma důležitými složkami - spring a damper. \textbf{Spring} udává sílu ''pružiny'', která naše těleso tlačí do cílové pozice. Je-li však síla dostatečně velká, může se stát, že cílovou pozici při pohybu ''přestřelíme''. V dalším snímku je pak k dorovnání třeba vyslat objekt opačným směrem atd. čímž vzniká nepěkný efekt třesení. Řešením je \textbf{damper} - ten udává, jak má být pohyb tlumen, aby k tomuto třasu nedocházelo, může ho však celkově zpomalovat. Pro dosažení dobrého hráčského dojmu ze hry je třeba umět správně vyladit poměr těchto dvou sil.
 
 Veškeré hodnoty cílových pozic, rotací apod. nejsou udávány v lokálních souřadnicích našeho rigidbody, ale v souřadnicovém systému unikátním pro náš joint. Jeho bázi lze nastavit skrze pole \textbf{axis} a \textbf{secondaryAxis}, třetí osa je následně dopočítána jako jejich vektorový součin. Hodnoty těchto bází jsou defaultně udávány v souřadnicích lokálních vůči našemu rigidbody, nastavením flagu configuredInWorldSpace lze však přepnout na jejich chápání jako globální hodnoty. Pro rotace se situace ještě komplikuje tím, že báze je posunuta tak, aby aktuální rotace zaznamenaná při vytvoření objektu (spuštění hry) odpovídala nulové rotaci. Na tuto problematiku narazíme v \ref{howToSetJointsTargetRotationSection}.
 
