--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -764,42 +764,49 @@ Na mečotoči i na trénovacím panákovi např. používáme \textit{TransformR
 Pro mečotoč největší pozornost zasluhuje \textit{SwordmillRandomizer} - ten randomizuje počet mečů, cestu koule nahoru/dolů po tyči a rovněž sílu, s kterou jsou meče koulí drženy.
 
 
-\subsection{Rytíř} \label{knightEnemySubsection}
+\subsection{Počítačem řízený šermíř} \label{knightEnemySubsection}
 
-Nejsofistikovanějším typem nepřítele je počítačem řízený šermíř.
+Při tvorbě nepřátelského šermíře jsme se snažili využít co nejvíce již existujících komponent vyvinutých pro hráčského šermíře. Výsledek tomu odpovídá - k původnímu prefabu hráčského šermíře nám stačilo až na několik detailů pouze přidat algoritmus strojové inteligence a vyměnit zdroj vstupu za simulovaný, který má algoritmus pod kontrolou. Rovněž bylo samozřejmě třeba zpřetrhat veškeré vazby na herní kameru a GUI - objekty, které náleží pouze hráči.
 
+Algoritmus umělé inteligence implementuje komponenta \textit{SwordsmanAI} - tu jsme přidali do kořenového objektu spolu s komponentou \textit{InputSimulator}, kterou jsme nahradili za původní \textit{BasicSwordInput}.
+
+
+\subsubsection*{Pohyb po terénu}
 \begin{itemize}
-  \item vychází z prefabu pro hráče - jenom nahrazuje ovládání klávesnicí a myší za počítačový algoritmus
-  \item taky nemá žádnou vazbu na hráčovo GUIčko (healthbar, bloodstains, death screen apod.) a není k němu spárovaná žádná kamera
-  \item v rootu komponenta SwordsmanAI - ovladač
-  \item \textbf{pohyb po terénu}
-    \begin{itemize}
-      \item používá standardní Uniťácký NavMesh - aby mohlo najednou být spawnutých víc rytířů najednou - co se vyhýbají jeden druhému a okolním překážkám
-      \item uvnitř arény jsme umístili NavMeshSurface, hráčovi a statickým nepřátelům jsme přidělili NavMeshObstacle -> rytíři jsou schopní se navigovat po aréně a vyhýbat se veškerým překážkám
-      \item NavMeshAgent... agent.updatePosition = agent.updateRotation = agent.updateUpAxis = false
-      \item Agent nijak nemodifikuje transform rytíře - místo toho řidicí skript kouká na jeho vyžádanou pozici a podle ní určuje hodnotu co nastaví do InputSimulatoru, ze kterého rytířův SwordsmanMovement bere vstup ; obdobně jako v \href{https://docs.unity3d.com/Manual/nav-CouplingAnimationAndNavigation.html}{tomhle manuálu} 
-      \item má nastavený nějaký transform jako cíl - Agentovi nastavuje aby se k němu snažil přiblížit
-      \item když je k cíli dostatečně blízko, tak agenta ignoruje a místo toho jenom stojí a dává pozor aby byl otočenej směrem na cíl
-    \end{itemize}
-  \item \textbf{ovládání meče}
-      \begin{itemize}
-        \item \textbf{pořídili jsme několik nahrávek pohybů meče}
-          \begin{itemize}
-            \item komponenta co se vecpe mezi SwordMovement a jeho submoduly - odchytává veškerá volání MoveSword() a reportuje jejich parametry do UnityEventu
-            \item parametry čte druhá komponenta - každý jednotlivý struct s argumentama převede do souřadnic relativních vůči transformu šermíře, přidá timestamp, a celou nahrávku ukládá jako pole do JSON texťáku (přes Newtonsoft.Json)
-          \end{itemize}
-        \item \textbf{přehrávání nahrávek}
-          \begin{itemize}
-            \item ve SwordsmanAI se v editoru nastaví pole nahrávek, co se mají přehrávat jako TextAssety
-            \item SwordsmanAI nejdřív deserializuje všechny nahrávky
-            \item potom násilně ve SwordMovementu vyhází původní Submoduly a vymění je za jediný defaultní SwordMovementMode\_PlayRecord
-            \item tomuhle submodulu předá seznam nahrávek co má přehrávat - submodul si pokaždé jednu náhodně vybere a tu přehrává
-            \item přehrávání nahrávek - submodul se řídí podle timestampů, hodnoty co jsou v záznamu převádí zpátky do globálních souřadnic podle transformu rytíře
-          \end{itemize}
-      \end{itemize}
-    \item máme tedy \acs{NPC} rytíře, co je schopný samostatně chodit po terénu a nebezpečně mávat mečem, drtivou většinu vnitřní logiky sdílí s \acs{PC}
+  \item používá standardní Uniťácký NavMesh - aby mohlo najednou být spawnutých víc rytířů najednou - co se vyhýbají jeden druhému a okolním překážkám
+  \item uvnitř arény jsme umístili NavMeshSurface, hráčovi a statickým nepřátelům jsme přidělili NavMeshObstacle -> rytíři jsou schopní se navigovat po aréně a vyhýbat se veškerým překážkám
+  \item NavMeshAgent... agent.updatePosition = agent.updateRotation = agent.updateUpAxis = false
+  \item Agent nijak nemodifikuje transform rytíře - místo toho řidicí skript kouká na jeho vyžádanou pozici a podle ní určuje hodnotu co nastaví do InputSimulatoru, ze kterého rytířův SwordsmanMovement bere vstup ; obdobně jako v \href{https://docs.unity3d.com/Manual/nav-CouplingAnimationAndNavigation.html}{tomhle manuálu} 
+  \item má nastavený nějaký transform jako cíl - Agentovi nastavuje aby se k němu snažil přiblížit
+  \item když je k cíli dostatečně blízko, tak agenta ignoruje a místo toho jenom stojí a dává pozor aby byl otočenej směrem na cíl
 \end{itemize}
 
+\subsubsection*{Ovládání meče - zamyšlení}
+\begin{itemize}
+  \item Mohli bychom pořizovat nahrávky paprsků z uživatelského vstupu - pak by s pohybem i s mečem komunikovalo AI dohromady stejnou cestou
+  \item Když však budeme nahrávat přímo SwordMovement.MoveSword() instrukce a necháme aby je přehrával specielní SwordMovement.Module...
+    \begin{itemize}
+      \item takový záznam je pro nás transparentnější, můžeme nad instrukcemi např. provádět maticové transformace apod. a libovolně pohyb meče měnit
+      \item takovej mechanismus pro přehrávání nahrávek bychom pak mohli zadarmo použít i jako dodatečnej mod pro hráčského šermíře - jako to dělá DbtS 
+    \end{itemize}
+\end{itemize}
+
+\subsubsection*{Ovládání meče - pořízení nahrávek}
+\begin{itemize}
+  \item komponenta co se vecpe mezi SwordMovement a jeho submoduly - odchytává veškerá volání MoveSword() a reportuje jejich parametry do UnityEventu
+  \item parametry čte druhá komponenta - každý jednotlivý struct s argumentama převede do souřadnic relativních vůči transformu šermíře, přidá timestamp, a celou nahrávku ukládá jako pole do JSON texťáku (přes Newtonsoft.Json)
+\end{itemize}
+
+\subsubsection*{Ovládání meče - přehrávání nahrávek}
+\begin{itemize}
+  \item ve SwordsmanAI se v editoru nastaví pole nahrávek, co se mají přehrávat jako TextAssety
+  \item SwordsmanAI nejdřív deserializuje všechny nahrávky
+  \item potom násilně ve SwordMovementu vyhází původní Submoduly a vymění je za jediný defaultní SwordMovementMode\_PlayRecord
+  \item tomuhle submodulu předá seznam nahrávek co má přehrávat - submodul si pokaždé jednu náhodně vybere a tu přehrává
+  \item přehrávání nahrávek - submodul se řídí podle timestampů, hodnoty co jsou v záznamu převádí zpátky do globálních souřadnic podle transformu rytíře
+\end{itemize}
+
+-máme tedy \acs{NPC} rytíře, co je schopný samostatně chodit po terénu a nebezpečně mávat mečem, drtivou většinu vnitřní logiky sdílí s \acs{PC}
 
 \section{Shrnutí}
 
