--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -36,6 +36,12 @@
   version = {4.0},
   url = {https://docs.unity3d.com/Packages/com.unity.textmeshpro@3.0/manual/index.html},
 }
+@software{NewtonsoftJson,
+  author = {{Newtonsoft}},
+  title = {Newtonsoft.Json},
+  version = {13.0.3},
+  url = {https://www.nuget.org/packages/Newtonsoft.Json/},
+}
 @software{ConfigurableJointExtensions,
   author = {{mstevenson}},
   title = {ConfigurableJointExtensions.cs},
