better structure diagrams

--- a/cs/kap05.tex
+++ b/cs/kap05.tex
@@ -23,11 +23,11 @@ Vynecháme algoritmy jednotlivých modulů ovládání - ty jsme již podrobně 
 
 \begin{figure}[p]\centering
   \center
-  \includegraphics[width=145mm]{../img/Structure-diagram.png}
-  \caption{Diagram znázorňující strukturu našeho systému - zopakování}
+  \includegraphics[width=145mm]{../img/Structure-diagram-impl.png}
+  \caption{Diagram znázorňující strukturu našeho systému - modře vlastní komponenty, zeleně vestavěné}
   \label{obr05:objectModelDiagramReprise}
 \end{figure} 
-
+ 
 \pagebreak
 
 %------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------%
